intTests/test_type_errors/err034.log.good
 Loading file "err034.saw"
 Parse error at err034.saw:7:22-7:25: Unexpected `Int'
FAILED
