intTests/test_type_errors/err034.saw
//
// Too many arguments for type constructor: monads
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : TopLevel Int Int = return 0;
